--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,11 +3,18 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+              android:background="@drawable/main_bg"
         >
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Hello World, MainActivity"
+            />
+    <Button android:id="@+id/run_btn"
+            android:layout_width="150dip"
+            android:layout_height="50dip"
+            android:text="@string/run_service"
+            style="@style/BootstrapButton"
             />
 </LinearLayout>
 
