--- a/res/layout/setting_firewall.xml
+++ b/res/layout/setting_firewall.xml
@@ -25,7 +25,7 @@
 
         <FrameLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="64dip" >
 
             <RadioGroup
                     android:id="@+id/main_tab_group"
@@ -42,7 +42,7 @@
                         style="@style/MMTabButton"
                         android:layout_weight="1.0"
                         android:drawableTop="@drawable/bg_checkbox_icon_menu_0"
-                        android:text="添加考试" />
+                        android:text="通讯录" />
 
                 <RadioButton
                         android:id="@+id/main_tab_myExam"
@@ -50,14 +50,14 @@
                         android:layout_weight="1.0"
                         android:checked="true"
                         android:drawableTop="@drawable/bg_checkbox_icon_menu_1"
-                        android:text="我的考试" />
+                        android:text="黑名单" />
 
                 <RadioButton
                         android:id="@+id/main_tab_message"
                         style="@style/MMTabButton"
                         android:layout_weight="1.0"
                         android:drawableTop="@drawable/bg_checkbox_icon_menu_2"
-                        android:text="我的通知" />
+                        android:text="白名单" />
 
                 <RadioButton
                         android:id="@+id/main_tab_settings"
