--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,8 +10,22 @@
             android:id="@+id/service_status_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World, MainActivity"
-            android:layout_marginBottom="30dp"
+            android:text=""
+            android:layout_marginBottom="10dp"
+            />
+    <TextView
+            android:id="@+id/block_rule_status_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_marginBottom="10dp"
+            />
+    <TextView
+            android:id="@+id/transfer_status_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_marginBottom="20dp"
             />
     <ProgressBar
             android:id="@+id/pb_loading"
