--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,6 +13,15 @@
             android:text=""
             android:layout_marginBottom="10dp"
             />
+
+    <ProgressBar
+            android:id="@+id/pb_loading"
+            style="@style/ListSpinner"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:layout_marginBottom="20dp"
+            />
+
     <TextView
             android:id="@+id/block_rule_status_txt"
             android:layout_width="wrap_content"
@@ -25,20 +34,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="0dp"
             />
-    <ProgressBar
-            android:id="@+id/pb_loading"
-            style="@style/ListSpinner"
-            android:layout_centerInParent="true"
-            android:visibility="gone"
-            android:layout_marginBottom="30dp"
-            />
+
     <Button android:id="@+id/run_btn"
             android:layout_width="150dip"
             android:layout_height="50dip"
             android:text="@string/run_service"
             style="@style/BootstrapButton"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
             />
     <Button android:id="@+id/stop_btn"
@@ -46,6 +50,7 @@
             android:layout_height="50dip"
             android:text="@string/stop_service"
             style="@style/BootstrapButton"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
             />
     <Button android:id="@+id/setting_btn"
@@ -61,7 +66,6 @@
             android:text="@string/view_log"
             style="@style/BootstrapButton"
             />
-
 
 
 </LinearLayout>
